# vit-inductive-bias-distillation

./: .gitignore  CLAUDE.md  CODEBASE_REVIEW_PLAN.md  CODEBASE_REVIEW_REPORT.md  README.md  RESULTS.md  TECHNICAL_OVERVIEW.md  main.py  pyproject.toml  requirements.txt  run_phase2.sh
arXiv-2406.12251v1/: acl_latex.tex
configs/: config.yaml  convnext_v2_cifar_config.yaml  defaults.yaml  deit_convnext_distill_config.yaml  deit_resnet18_distill_config.yaml  deit_ss_distill_cifar_ablation_ce_only.yaml  deit_ss_distill_cifar_config.yaml  deit_ss_distill_cka_cifar_config.yaml  deit_ss_distill_cka_cls_cifar_config.yaml  deit_ss_distill_gram_ablation_config.yaml  resnet18_cifar_config.yaml
configs/experiment/: basd_cifar100.yaml  basd_imagenet_cross_arch.yaml  basd_imagenet_deit_small.yaml  baseline_cifar100.yaml  baseline_imagenet.yaml
configs/experiment/ablation/: fixed_rank.yaml  no_attn.yaml  no_dsgt.yaml  no_rsd.yaml  rsd_only.yaml
scripts/: generate_comparison_plots.py
src/: __init__.py  analytics.py  config.py  datasets.py  distillation.py  eval.py  models.py  resolvers.py  teachers.py  train.py  training.py  visualization.py  vit.py
src/data/: datasets.py
src/evaluation/: metrics.py
src/losses/: attention.py  combined.py  layer_selector.py  relational.py  rsd.py  spectral.py
src/models/: deit.py  teacher.py
src/training/: trainer.py
