[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vit-inductive-bias-distillation"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "torch==2.2.0",
    "torchvision==0.17.0",
    "numpy==1.26.0",
    "PyYAML==6.0",
    "tqdm==4.66.0",
    "timm==0.9.12",
    "scikit-learn==1.4.0",
]

[tool.setuptools]
packages = ["src", "src.*"]